<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="appName">Trip Dossier</string>
  <string name="appMenuItemHelp">Help</string>
  <string name="appMenuItemSettings">Settings</string>

  <string name="errorRequiredMissing">Required</string>
  <string name="errorEmailInvalid">Invalid email</string>
  <string name="errorPasswordInvalid">Invalid password</string>

  <string name="guestLabel">Trip Dossier</string>
  <string name="guestMenuItemRegister">Signup for Trip Dossier</string>
  <string name="guestMenuItemLogin">Got an account? Login!</string>
  <string name="guestFacebook">or, Connect with Facebook</string>

  <string name="userLabel">Trip Dossier</string>
  <string name="userMenuItemTripCreate">New Trip</string>

  <string name="registerLabel">Signup for Trip Dossier</string>
  <string name="registerInputEmailHint">Email</string>
  <string name="registerInputPasswordHint">Password</string>
  <string name="registerInputPasswordConfirmHint">Confirm password</string>
  <string name="registerInputIAgreeText">I agree to Terms and Conditions</string>
  <string name="registerSubmit">Submit</string>

  <string name="loginLabel">Login to Trip Dossier</string>
  <string name="loginInputEmailHint">Email</string>
  <string name="loginInputPasswordHint">Password</string>
  <string name="loginSubmit">Submit</string>

  <string name="tripCreateLabel">Add a new trip</string>

</resources>
