<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" android:layout_height="fill_parent"
              android:background="@drawable/background" android:orientation="vertical">

  <EditText android:id="@+id/loginInputEmail"
            android:hint="@string/loginInputEmailHint"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="textEmailAddress"/>

  <EditText android:id="@+id/loginInputPassword"
            android:hint="@string/loginInputPasswordHint"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="textPassword"/>

  <Button android:id="@+id/loginSubmit"
          android:text="@string/loginSubmit"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:onClick="onSubmit"/>

</LinearLayout>