<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent" android:layout_height="fill_parent"
                android:background="@drawable/background">

  <!--suppress AndroidLintUselessParent -->
  <LinearLayout android:layout_centerInParent="true" android:orientation="vertical"
                android:layout_width="wrap_content" android:layout_height="wrap_content">
    <Button android:id="@+id/homeGuestRegister"
            android:text="@string/guestMenuItemRegister"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:onClick="startRegisterActivity"/>
    <Button android:id="@+id/homeGuestFacebook"
            android:text="@string/guestFacebook"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"/>
    <Button android:id="@+id/homeGuestLogin"
            android:text="@string/guestMenuItemLogin"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:onClick="startLoginActivity"/>
  </LinearLayout>

</RelativeLayout>